<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fitsSystemWindows="true"
        tools:ignore="UselessLeaf" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/bgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:fitsSystemWindows="true"
                android:background="@drawable/bg_landscape"
                tools:ignore="ContentDescription,MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHeaderInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="100dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_chevron_right_black_24dp"
                        android:id="@+id/imageView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintTop_toTopOf="@+id/textView2"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:text="@string/lorem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
                        android:textColor="@color/color_text_header"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sisa_saldo"
                        android:textColor="#313131"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:id="@+id/textView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saldo"
                        android:textColor="#313131"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        android:id="@+id/textView2"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp"
                        app:layout_constraintEnd_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2"
                        android:layout_marginEnd="5dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#e7e7e7"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginTop="14dp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        android:id="@+id/view"
                        android:layout_marginEnd="8dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_launcher"
                        android:id="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_launcher"
                        android:id="@+id/imageView"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        android:id="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:text="@string/lorem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textColor="@color/color_text_header"
                        android:textSize="16sp"/>

                    <TextView
                        android:text="@string/lorem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
                        android:textColor="@color/color_text_header"
                        android:textSize="16sp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTelusuri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telusuri"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/color_text_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/cardHeaderInfo"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cek"
                app:layout_constraintTop_toBottomOf="@id/tvTelusuri"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="16dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/listService"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingBottom="30dp"
                android:clipToPadding="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="#00ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="5dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/avatarBadge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tenclouds.fluidbottomnavigation.FluidBottomNavigation
            android:id="@+id/fluidBottomNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:height="54dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>